--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -5,36 +5,52 @@
         <ion-grid>
           <ion-row>
             <ion-col size="12" class="pb-5">
-              <ion-label>{{ 'phone' | translate }}<span class="text-red-600 ps-1">*</span></ion-label>
-              <ion-input formControlName="phone" type="tel" inputmode="tel" required="required"></ion-input>
-              <div *ngIf="hasError('phone', 'required')"
-                   class="error-text text-red-600 text-sm py-2 ps-1">
-                {{ 'phone_required_msg' | translate }}
+              <ion-label>{{ TranslateKeys.COMMON_PHONE | translate }}<span class="text-red-600 ps-1">*</span></ion-label>
+              <ion-input formControlName="phone" type="tel" inputmode="tel" required="required" (ionInput)="onUsernameInput($event)" [clearInput]="true"></ion-input>
+              <div *ngIf="hasError('phone', 'required')" class="error-text text-red-600 text-sm py-2 ps-1">
+                {{ TranslateKeys.VALIDATE_PHONE_REQUIRED | translate }}
+              </div>
+
+              <!-- Gợi ý username -->
+              <div *ngIf="filteredAccounts.length && showSuggestions && !hasError('phone', 'required')" class="suggestions">
+                <ion-list lines="full">
+                  <ion-item button *ngFor="let acc of filteredAccounts" (click)="selectUsername(acc)">
+                    {{ acc.username }}
+                  </ion-item>
+                </ion-list>
               </div>
             </ion-col>
 
             <ion-col size="12" class="pb-5">
-              <ion-label>{{ 'password' | translate }}<span class="text-red-600 ps-1">*</span></ion-label>
+              <ion-label>{{ TranslateKeys.COMMON_PASSWORD | translate }}<span class="text-red-600 ps-1">*</span></ion-label>
               <ion-input formControlName="password" type="password" inputmode="text"
                          class="input-password border border-solid border-[#6b7280] rounded">
                 <ion-input-password-toggle slot="end" color="medium"></ion-input-password-toggle>
               </ion-input>
-              <div *ngIf="hasError('password', 'required')"
-                   class="error-text text-red-600 text-sm py-2 ps-1">
-                {{ 'password_required_msg' | translate }}
+              <div *ngIf="hasError('password', 'required')" class="error-text text-red-600 text-sm py-2 ps-1">
+                {{ TranslateKeys.VALIDATE_PASS_REQUIRED | translate }}
               </div>
+            </ion-col>
+
+            <ion-col size="12" class="pb-5">
+              <ion-checkbox mode="md" formControlName="remember" labelPlacement="end">
+                {{ TranslateKeys.COMMON_REMEMBER_ME | translate }}
+              </ion-checkbox>
             </ion-col>
 
             <ion-col size="12" class="pt-3">
               <div class="w-full flex items-center justify-between">
-                <ion-button color="primary" type="submit" class="w-full">{{ 'login' | translate }}</ion-button>
+                <ion-button color="primary" type="submit" class="w-full">
+                  {{ TranslateKeys.COMMON_LOGIN | translate }}
+                </ion-button>
               </div>
             </ion-col>
 
             <ion-col size="12">
-              <ion-select (ionChange)="switchLanguage($event.detail.value)" [value]="defaultLang">
-                <ion-select-option value="en">English</ion-select-option>
-                <ion-select-option value="vi">Tiếng Việt</ion-select-option>
+              <ion-select interface="action-sheet" (ionChange)="switchLanguage($event.detail.value)"
+                          [value]="defaultLang" cancelText="{{ TranslateKeys.BUTTON_CANCEL | translate }}">
+                <ion-select-option value="en">{{ TranslateKeys.COMMON_ENGLISH | translate }}</ion-select-option>
+                <ion-select-option value="vi">{{ TranslateKeys.COMMON_VIETNAMESE | translate }}</ion-select-option>
               </ion-select>
             </ion-col>
           </ion-row>
