--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -3,4 +3,15 @@ ion-content {
     --padding-top: 0;
     --padding-bottom: 0;
   }
+
+  .suggestions {
+    position: absolute;
+    width: calc(100% - 10px);
+    background-color: white;
+    z-index: 1000;
+    max-height: 200px;
+    overflow-y: auto;
+    border-radius: 0 0 10px 10px;
+    box-shadow: 2px 2px 10px #bababa;
+  }
 }
