feat(login-page): Thêm cấu trúc auth.service hàm xử lý gọi API login và get profile

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="w-full flex items-center" [style.height]="platform.height() + 'px'">
-    <ng-container *ngIf="loginForm">
+    <ng-container *ngIf="loginForm && isReady">
       <form class="w-full" [formGroup]="loginForm" (submit)="onClickLogin()">
         <ion-grid>
           <ion-row>
