--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,7 +2,7 @@
   <div *ngIf="deviceHeight" [style.min-height]="deviceHeight"
        class="flex relative w-full bg-[url(assets/images/login-background.png)] bg-bottom bg-no-repeat bg-cover">
     <!-- Chuyển đổi ngôn ngữ -->
-    <div class="switch-lang-container absolute top-3 right-3 p-0 bg-gray-200 rounded-full">
+    <div class="switch-lang-container absolute top-3 right-3 p-0 bg-gray-200 rounded-full" *ngIf="defaultLang">
       <ion-select interface="action-sheet" class="switch-lang" mode="ios" (ionChange)="switchLanguage($event.detail.value)"
                   [value]="defaultLang" cancelText="{{ TranslateKeys.BUTTON_CANCEL | translate }}">
         <ion-select-option [value]="LanguageKeys.EN">{{ TranslateKeys.COMMON_ENGLISH | translate }}</ion-select-option>
@@ -65,12 +65,14 @@
                   <!-- Nút submit form đăng nhập -->
                   <ion-col size="12">
                     <div class="flex items-center justify-between w-full">
-                      <ion-button color="primary" type="submit" class="w-full" *ngIf="!(isEnableBiometric && biometricAvailable?.isAvailable && hasCredentials)">
+                      <ion-button color="primary" type="submit" class="w-full" [appSoundClick]="true"
+                                  *ngIf="!(isEnableBiometric && biometricAvailable?.isAvailable && hasCredentials)">
                         {{ TranslateKeys.COMMON_LOGIN | translate }}
                       </ion-button>
 
                       <!-- Đăng nhập bằng sinh trắc học-->
-                      <ion-button color="primary" type="button" class="w-full" *ngIf="isEnableBiometric && biometricAvailable?.isAvailable && hasCredentials" (click)="onClickLoginBiometric()">
+                      <ion-button color="primary" type="button" class="w-full"  [appSoundClick]="true"
+                                  *ngIf="isEnableBiometric && biometricAvailable?.isAvailable && hasCredentials" (click)="onClickLoginBiometric()">
                         <ion-img *ngIf="isFaceID" src="assets/icons/svg/face-id-svgrepo-com.svg" class="w-8 h-8"></ion-img>
                         <ion-img *ngIf="!isFaceID" src="assets/icons/svg/fingerprint-scan-svgrepo-com.svg" class="w-8 h-8"></ion-img>
                         <span class="pl-4">{{ TranslateKeys.COMMON_LOGIN | translate }}</span>
