fix(auth): Lỗi sự kiên appStateChange khi thực hiện xác thực bằng biometric

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <ion-app>
-  <app-pin-unlock *ngIf="showLockScreen" (unlocked)="onUnlockSuccess()"></app-pin-unlock>
+  <app-pin-unlock *ngIf="showLockScreen"></app-pin-unlock>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
