--- a/src/app/shared/components/pin-unlock/pin-unlock.component.html
+++ b/src/app/shared/components/pin-unlock/pin-unlock.component.html
@@ -1,4 +1,4 @@
-<ion-content [fullscreen]="true" class="ion-padding h-dvh flex flex-col items-center justify-center bg-black text-center z-50">
+<ion-content [fullscreen]="true" class="ion-padding h-dvh flex flex-col items-center justify-center native-padding-content bg-black text-center z-50">
 
   <div class="text-5xl mt-3 mb-6">
     <ion-icon name="lock-closed-outline" color="light"></ion-icon>
