--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -47,3 +47,15 @@ select {
 .ion-touched.ion-invalid {
   border-color: var(--ion-color-danger);
 }
+
+.native-padding-content {
+  --padding-top: env(safe-area-inset-top) !important;
+  --padding-bottom: env(safe-area-inset-bottom) !important;
+  --padding-left: env(safe-area-inset-left) !important;
+  --padding-right: env(safe-area-inset-right) !important;
+  padding-top: env(safe-area-inset-top) !important;
+  padding-bottom: env(safe-area-inset-bottom) !important;
+  padding-left: env(safe-area-inset-left) !important;
+  padding-right: env(safe-area-inset-right) !important;
+}
+
