--- a/src/app/shared/components/pin-unlock/pin-unlock.component.html
+++ b/src/app/shared/components/pin-unlock/pin-unlock.component.html
@@ -4,7 +4,7 @@
     <ion-icon name="lock-closed-outline" color="light"></ion-icon>
   </div>
 
-  <div class="text-lg mb-6 text-white">{{ TranslateKeys.COMMON_INPUT_PIN | translate }}</div>
+  <div class="text-lg mb-6 text-white">{{ TranslateKeys.TITLE_INPUT_PIN | translate }}</div>
 
   <!-- Chấm tròn hiển thị số lượng số đã nhập -->
   <div class="flex gap-3 mb-14 justify-center justify-items-center" [ngClass]="{ 'shake': isError }">
