--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -17,7 +17,7 @@
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
     <ion-button color="danger" (click)="onClickLogout()">
-      {{ TranslateKeys.COMMON_LOGOUT | translate }}
+      {{ TranslateKeys.TITLE_LOGOUT | translate }}
     </ion-button>
   </div>
 </ion-content>
