feat(profile-page): Thêm cấu trúc và các component con. Chức năng thiết lập giao diện, avatar, hình nền.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,11 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -21,3 +13,5 @@
     </ion-button>
   </div>
 </ion-content>
+
+<app-footer></app-footer>
