--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,4 +1,6 @@
 ion-content {
+  --ion-text-color: var(--custom-page-text-light);
+
   .input-password {
     --padding-top: 0;
     --padding-bottom: 0;
