--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,61 +1,167 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
 
-// Disabled global style for input focus event
-[type='text']:focus,
-input:where(:not([type])):focus,
-[type='email']:focus,
-[type='url']:focus,
-[type='password']:focus,
-[type='number']:focus,
-[type='date']:focus,
-[type='datetime-local']:focus,
-[type='month']:focus,
-[type='search']:focus,
-[type='tel']:focus,
-[type='time']:focus,
-[type='week']:focus,
-[multiple]:focus,
-textarea:focus,
-select:focus {
-  box-shadow: none;
+/* Chế độ sáng */
+:root {
+  --custom-page-bg-light: #dfdfdf;
+  --custom-page-text-light: #000000;
 }
 
-[type='text'],
-input:where(:not([type])),
-[type='email'],
-[type='url'],
-[type='password'],
-[type='number'],
-[type='date'],
-[type='datetime-local'],
-[type='month'],
-[type='search'],
-[type='tel'],
-[type='time'],
-[type='week'],
-[multiple],
-textarea,
-select {
-  --padding-start: 0.85rem;
-  --padding-end: 0.3rem;
-  --padding-top: 0.5rem;
-  --padding-bottom: 0.5rem;
-  border-radius: 0.3rem;
+/* Chế độ tối */
+.dark {
+  --ion-color-primary: #428cff;
+  --ion-color-primary-rgb: 66, 140, 255;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #3a7be0;
+  --ion-color-primary-tint: #5598ff;
+
+  --ion-color-secondary: #50c8ff;
+  --ion-color-secondary-rgb: 80, 200, 255;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255, 255, 255;
+  --ion-color-secondary-shade: #46b0e0;
+  --ion-color-secondary-tint: #62ceff;
+
+  --ion-color-tertiary: #6a64ff;
+  --ion-color-tertiary-rgb: 106, 100, 255;
+  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+  --ion-color-tertiary-shade: #5d58e0;
+  --ion-color-tertiary-tint: #7974ff;
+
+  --ion-color-success: #2fdf75;
+  --ion-color-success-rgb: 47, 223, 117;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0, 0, 0;
+  --ion-color-success-shade: #29c467;
+  --ion-color-success-tint: #44e283;
+
+  --ion-color-warning: #ffd534;
+  --ion-color-warning-rgb: 255, 213, 52;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0, 0, 0;
+  --ion-color-warning-shade: #e0bb2e;
+  --ion-color-warning-tint: #ffd948;
+
+  --ion-color-danger: #ff4961;
+  --ion-color-danger-rgb: 255, 73, 97;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255, 255, 255;
+  --ion-color-danger-shade: #e04055;
+  --ion-color-danger-tint: #ff5b71;
+
+  --ion-color-dark: #f4f5f8;
+  --ion-color-dark-rgb: 244, 245, 248;
+  --ion-color-dark-contrast: #000000;
+  --ion-color-dark-contrast-rgb: 0, 0, 0;
+  --ion-color-dark-shade: #d7d8da;
+  --ion-color-dark-tint: #f5f6f9;
+
+  --ion-color-medium: #989aa2;
+  --ion-color-medium-rgb: 152, 154, 162;
+  --ion-color-medium-contrast: #ffffff;
+  --ion-color-medium-contrast-rgb: 255, 255, 255;
+  --ion-color-medium-shade: #86888f;
+  --ion-color-medium-tint: #a2a4ab;
+
+  --ion-color-light: #222428;
+  --ion-color-light-rgb: 34, 36, 40;
+  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast-rgb: 255, 255, 255;
+  --ion-color-light-shade: #1e2023;
+  --ion-color-light-tint: #383a3e;
+
+  --ion-background-color: #000000;
+  --ion-background-color-rgb: 0, 0, 0;
+
+  --ion-text-color: #ffffff;
+  --ion-text-color-rgb: 255, 255, 255;
+
+  --ion-text-color-step-50: #f2f2f2;
+  --ion-text-color-step-100: #e6e6e6;
+  --ion-text-color-step-150: #d9d9d9;
+  --ion-text-color-step-200: #cccccc;
+  --ion-text-color-step-250: #bfbfbf;
+  --ion-text-color-step-300: #b3b3b3;
+  --ion-text-color-step-350: #a6a6a6;
+  --ion-text-color-step-400: #999999;
+  --ion-text-color-step-450: #8c8c8c;
+  --ion-text-color-step-500: #808080;
+  --ion-text-color-step-550: #737373;
+  --ion-text-color-step-600: #666666;
+  --ion-text-color-step-650: #595959;
+  --ion-text-color-step-700: #4d4d4d;
+  --ion-text-color-step-750: #404040;
+  --ion-text-color-step-800: #333333;
+  --ion-text-color-step-850: #262626;
+  --ion-text-color-step-900: #191919;
+  --ion-text-color-step-950: #0d0d0d;
+
+  --ion-background-color-step-50: #0d0d0d;
+  --ion-background-color-step-100: #1a1a1a;
+  --ion-background-color-step-150: #262626;
+  --ion-background-color-step-200: #333333;
+  --ion-background-color-step-250: #404040;
+  --ion-background-color-step-300: #4d4d4d;
+  --ion-background-color-step-350: #595959;
+  --ion-background-color-step-400: #666666;
+  --ion-background-color-step-450: #737373;
+  --ion-background-color-step-500: #808080;
+  --ion-background-color-step-550: #8c8c8c;
+  --ion-background-color-step-600: #999999;
+  --ion-background-color-step-650: #a6a6a6;
+  --ion-background-color-step-700: #b3b3b3;
+  --ion-background-color-step-750: #bfbfbf;
+  --ion-background-color-step-800: #cccccc;
+  --ion-background-color-step-850: #d9d9d9;
+  --ion-background-color-step-900: #e6e6e6;
+  --ion-background-color-step-950: #f2f2f2;
+
+  --ion-backdrop-color: #000000;
+  --ion-backdrop-opacity: 0.32;
+
+  --ion-overlay-background-color: #1e1e1e;
+  --ion-border-color: #444;
+  --ion-box-shadow-color: rgba(0, 0, 0, 0.6);
+
+  --ion-tab-bar-background: #1e1e1e;
+  --ion-tab-bar-background-focused: #2a2a2a;
+  --ion-tab-bar-border-color: #333;
+  --ion-tab-bar-color: #aaa;
+  --ion-tab-bar-color-selected: #4c8dff;
+
+  --ion-toolbar-background: #1f1f1f;
+  --ion-toolbar-border-color: #333;
+  --ion-toolbar-color: #fff;
+  --ion-toolbar-segment-color: #ccc;
+  --ion-toolbar-segment-color-checked: #000;
+  --ion-toolbar-segment-background: #333;
+  --ion-toolbar-segment-background-checked: #4c8dff;
+  --ion-toolbar-segment-indicator-color: #4c8dff;
+
+  --ion-item-background: #323232;
+  --ion-item-border-color: #444;
+  --ion-item-color: #fff;
+
+  --ion-placeholder-color: #aaa;
 }
 
-.ion-touched.ion-invalid {
-  border-color: var(--ion-color-danger);
+/**
+ * Custom style
+ * ----------------------------------------------------
+ */
+@import 'swiper/swiper-bundle.css';
+@import "common.css";
+@import "form.css";
+
+/* Set text-zoom PWA */
+:root {
+  --text-zoom: 1;
 }
 
-.native-padding-content {
-  --padding-top: env(safe-area-inset-top) !important;
-  --padding-bottom: env(safe-area-inset-bottom) !important;
-  --padding-left: env(safe-area-inset-left) !important;
-  --padding-right: env(safe-area-inset-right) !important;
-  padding-top: env(safe-area-inset-top) !important;
-  padding-bottom: env(safe-area-inset-bottom) !important;
-  padding-left: env(safe-area-inset-left) !important;
-  padding-right: env(safe-area-inset-right) !important;
+html {
+  font-size: calc(1rem * var(--text-zoom));
 }
+
 
