feat(change-password): Form change password

--- a/src/app/pages/student/profile/account-and-security/change-password/change-password.component.html
+++ b/src/app/pages/student/profile/account-and-security/change-password/change-password.component.html
@@ -1,12 +1,72 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text="" color="primary" defaultHref="/{{PageRoutes.PROFILE}}/{{PageRoutes.ACCOUNT_AND_SECURITY}}"></ion-back-button>
+      <ion-back-button text="" color="primary"
+                       defaultHref="/{{PageRoutes.PROFILE}}/{{PageRoutes.ACCOUNT_AND_SECURITY}}"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ TranslateKeys.TITLE_CHANGE_PASSWORD | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="custom-page-bg-light" [fullscreen]="true">
-  <!-- TODO: Chức năng hiển thị form đổi mật khẩu -->
+  <div class="p-4">
+    <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="onSubmit()">
+      <ion-grid>
+        <!-- Current Password -->
+        <ion-row>
+          <ion-col>
+            <ion-label position="stacked">{{ TranslateKeys.TITLE_PASSWORD | translate }}<span
+              class="text-red-600 ps-1">*</span></ion-label>
+            <ion-input formControlName="currentPassword" type="password" inputmode="text">
+              <ion-input-password-toggle slot="end" color="primary"></ion-input-password-toggle>
+            </ion-input>
+            <div *ngIf="hasError('currentPassword', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
+              {{ TranslateKeys.VALIDATE_PASS_REQUIRED | translate }}
+            </div>
+          </ion-col>
+        </ion-row>
+
+        <!-- New Password -->
+        <ion-row>
+          <ion-col>
+            <ion-label position="stacked">{{ 'TITLE.new_password' | translate }}<span class="text-red-600 ps-1">*</span>
+            </ion-label>
+            <ion-input formControlName="newPassword" type="password" inputmode="text">
+              <ion-input-password-toggle slot="end" color="primary"></ion-input-password-toggle>
+            </ion-input>
+            <div *ngIf="hasError('newPassword', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
+              {{ 'VALIDATE.new_password_required' | translate }}
+            </div>
+            <div *ngIf="hasError('newPassword', 'minlength')" class="error-text text-red-600 text-sm pt-2 ps-1">
+              {{ 'VALIDATE.password_min_length' | translate }}
+            </div>
+          </ion-col>
+        </ion-row>
+
+        <!-- Confirm Password -->
+        <ion-row>
+          <ion-col>
+            <ion-label position="stacked">{{ 'TITLE.confirm_password' | translate }}<span
+              class="text-red-600 ps-1">*</span></ion-label>
+            <ion-input formControlName="confirmPassword" type="password" inputmode="text">
+              <ion-input-password-toggle slot="end" color="primary"></ion-input-password-toggle>
+            </ion-input>
+            <div *ngIf="hasError('confirmPassword', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
+              {{ 'VALIDATE.confirm_password_required' | translate }}
+            </div>
+            <div *ngIf="hasError('confirmPassword', 'passwordMismatch')"
+                 class="error-text text-red-600 text-sm pt-2 ps-1">
+              {{ 'VALIDATE.passwords_not_match' | translate }}
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <!-- Submit Button -->
+      <ion-button expand="block" type="submit" [disabled]="passwordForm.invalid || isSubmitting">
+        <ion-icon name="save-outline" slot="start"></ion-icon>
+        {{ 'BUTTON_TITLES.save_changes' | translate }}
+      </ion-button>
+    </form>
+  </div>
 </ion-content>
