--- a/src/app/shared/components/pin-verify-modal/pin-verify-modal.component.scss
+++ b/src/app/shared/components/pin-verify-modal/pin-verify-modal.component.scss
@@ -3,11 +3,6 @@
   color: var(--ion-text-color-step-950);
   padding: 20px;
   height: 100%;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
 }
 
 :host-context(.dark) .ios-lock-screen {
@@ -35,8 +30,9 @@
   }
 }
 
-.biometric-button {
-  margin-top: 20px;
+.cancel-button {
+  color: #ff3b30;
+  font-weight: 600;
 }
 
 @keyframes shake {
