fix(form-change-password): Chỉnh sửa một số key chưa khai báo enum

--- a/src/app/pages/student/profile/account-and-security/change-password/change-password.component.html
+++ b/src/app/pages/student/profile/account-and-security/change-password/change-password.component.html
@@ -2,21 +2,23 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button text="" color="primary"
-                       defaultHref="/{{PageRoutes.PROFILE}}/{{PageRoutes.ACCOUNT_AND_SECURITY}}"></ion-back-button>
+                       defaultHref="/{{PageRoutes.PROFILE}}/{{PageRoutes.ACCOUNT_AND_SECURITY}}">
+      </ion-back-button>
     </ion-buttons>
     <ion-title>{{ TranslateKeys.TITLE_CHANGE_PASSWORD | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="custom-page-bg-light" [fullscreen]="true">
-  <div class="p-4">
-    <form *ngIf="passwordForm" [formGroup]="passwordForm" (ngSubmit)="onSubmit()">
+  <div class="m-3 py-4 px-3 rounded-xl bg-gray-50 dark:bg-gray-800" *ngIf="passwordForm">
+    <form [formGroup]="passwordForm" (ngSubmit)="onSubmit()">
       <ion-grid>
         <!-- Current Password -->
         <ion-row>
           <ion-col>
-            <ion-label position="stacked">{{ TranslateKeys.TITLE_PASSWORD | translate }}<span
-              class="text-red-600 ps-1">*</span></ion-label>
+            <ion-label position="stacked">
+              {{ TranslateKeys.TITLE_PASSWORD | translate }}<span class="text-red-600 ps-1">*</span>
+            </ion-label>
             <ion-input formControlName="currentPassword" type="password" inputmode="text">
               <ion-input-password-toggle slot="end" color="primary"></ion-input-password-toggle>
             </ion-input>
@@ -29,16 +31,17 @@
         <!-- New Password -->
         <ion-row>
           <ion-col>
-            <ion-label position="stacked">{{ 'TITLE.new_password' | translate }}<span class="text-red-600 ps-1">*</span>
+            <ion-label position="stacked">
+              {{ TranslateKeys.TITLE_NEW_PASSWORD | translate }}<span class="text-red-600 ps-1">*</span>
             </ion-label>
             <ion-input formControlName="newPassword" type="password" inputmode="text">
               <ion-input-password-toggle slot="end" color="primary"></ion-input-password-toggle>
             </ion-input>
             <div *ngIf="hasError('newPassword', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
-              {{ 'VALIDATE.new_password_required' | translate }}
+              {{ TranslateKeys.VALIDATE_NEW_PASS_REQUIRED | translate }}
             </div>
             <div *ngIf="hasError('newPassword', 'minlength')" class="error-text text-red-600 text-sm pt-2 ps-1">
-              {{ 'VALIDATE.password_min_length' | translate }}
+              {{ TranslateKeys.VALIDATE_PASS_MIN_LENGTH | translate }}
             </div>
           </ion-col>
         </ion-row>
@@ -46,27 +49,30 @@
         <!-- Confirm Password -->
         <ion-row>
           <ion-col>
-            <ion-label position="stacked">{{ 'TITLE.confirm_password' | translate }}<span
+            <ion-label position="stacked">{{ TranslateKeys.TITLE_CONFIRM_PASSWORD | translate }}<span
               class="text-red-600 ps-1">*</span></ion-label>
             <ion-input formControlName="confirmPassword" type="password" inputmode="text">
               <ion-input-password-toggle slot="end" color="primary"></ion-input-password-toggle>
             </ion-input>
             <div *ngIf="hasError('confirmPassword', 'required')" class="error-text text-red-600 text-sm pt-2 ps-1">
-              {{ 'VALIDATE.confirm_password_required' | translate }}
+              {{ TranslateKeys.VALIDATE_CONFIRM_PASS_REQUIRED | translate }}
             </div>
             <div *ngIf="hasError('confirmPassword', 'passwordMismatch')"
                  class="error-text text-red-600 text-sm pt-2 ps-1">
-              {{ 'VALIDATE.passwords_not_match' | translate }}
+              {{ TranslateKeys.VALIDATE_PASS_MATCH | translate }}
             </div>
           </ion-col>
         </ion-row>
-      </ion-grid>
 
-      <!-- Submit Button -->
-      <ion-button expand="block" type="submit" [disabled]="passwordForm.invalid || isSubmitting">
-        <ion-icon name="save-outline" slot="start"></ion-icon>
-        {{ 'BUTTON_TITLES.save_changes' | translate }}
-      </ion-button>
+        <!-- Submit Button -->
+        <ion-row>
+          <ion-col>
+            <ion-button expand="block" type="submit">
+              {{ TranslateKeys.BUTTON_UPDATE | translate }}
+            </ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </form>
   </div>
 </ion-content>
