--- a/src/theme/form.css
+++ b/src/theme/form.css
@@ -36,11 +36,30 @@ textarea,
 select {
   --padding-start: 0.85rem;
   --padding-end: 0.3rem;
-  --padding-top: 0.5rem;
-  --padding-bottom: 0.5rem;
   border-radius: 0.3rem;
 }
 
 .ion-touched.ion-invalid {
   border-color: var(--ion-color-danger);
+}
+
+.dark {
+  [type='text'],
+  input:where(:not([type])),
+  [type='email'],
+  [type='url'],
+  [type='password'],
+  [type='number'],
+  [type='date'],
+  [type='datetime-local'],
+  [type='month'],
+  [type='search'],
+  [type='tel'],
+  [type='time'],
+  [type='week'],
+  [multiple],
+  textarea,
+  select {
+    background: transparent;
+  }
 }
