--- a/src/app/pages/student/profile/account-and-security/change-password/change-password.component.scss
+++ b/src/app/pages/student/profile/account-and-security/change-password/change-password.component.scss
@@ -1,65 +1,7 @@
-ion-content {
-  .p-4 {
-    padding: 1.5rem;
-  }
-
-  form {
-    margin: 0 auto;
-    max-width: 500px;
-  }
-
-  ion-list {
-    padding: 0;
-    background-color: transparent !important;
-
-    ion-item {
-      background-color: transparent !important;
-      --background: transparent !important;
-      --border-color: transparent;
-      --border-style: none;
-      --border-width: 0;
-      --padding-start: 0;
-      --inner-padding-end: 0;
-      --min-height: 65px;
-      margin-bottom: 0.5rem;
-
-      ion-label {
-        font-weight: 500;
-      }
-
-      ion-input {
-        --padding-top: 0px;
-        --padding-bottom: 0px;
-        font-size: 1rem;
-        border-radius: 8px;
-        --padding-start: 12px;
-        --padding-end: 12px;
-        margin-top: 4px;
-        background-color: var(--ion-background-color-step-150);
-      }
-
-      .error-text {
-        font-size: 0.75rem;
-        color: var(--ion-color-danger);
-        margin-top: 4px;
-        padding-left: 0;
-        border: none;
-      }
-    }
-  }
-
-  ion-button {
-    margin-top: 1.5rem;
-    height: 48px;
-    font-size: 1rem;
-    font-weight: 500;
-    letter-spacing: 0.5px;
-    --box-shadow: none;
-
-    ion-icon {
-      margin-right: 8px;
-      font-size: 1.2rem;
-    }
-  }
+ion-content.custom-page-bg-light {
+  --background: var(--custom-page-bg-light);
 }
 
+:host-context(.dark) ion-content.custom-page-bg-light {
+  --background: var(--ion-backdrop-color);
+}
